--- a/.env.template
+++ b/.env.template
@@ -14,8 +14,13 @@ GATEWAY_PORT=3500
 
 # The Docker release to use (latest = stable)
 RELEASE_CHANNEL=latest
-# The MongoDB version to use
-MONGODB_VERSION=7.0
+
+# MSSQL Details
+MSSQL_HOST=localhost
+MSSQL_PORT=1433
+MSSQL_USER=testuser
+MSSQL_PASSWORD=Health123
+MSSQL_DATABASE=TestDB
 
 ## ---------------------------------
 ## PRODUCTION + DEVELOPMENT
@@ -27,14 +32,7 @@ PROJECT_ROOT=
 # The value to use for various security purposes.
 SECRET_KEY=
 
-# MongoDB URI not including database name. This will be overriden in production
-# by the value defined in docker-compose.yaml. If you are using a remote database in
-# development, you should set that here.
-MONGO_URI=mongodb://localhost:27017
-MONGO_REPLICA_SET=
-MONGO_RETRY_WRITES=
-MONGO_WRITE_CONCERN=
-MONGO_DIRECT_CONNECTION=
+
 
 # An email address to be used for mailto links on the website
 CONTACT_EMAIL=support@douglasneuroinformatics.ca
