refactor(schema): refactor schema.prisma file datatypes to match mssql

--- a/.env.template
+++ b/.env.template
@@ -15,12 +15,12 @@ GATEWAY_PORT=3500
 # The Docker release to use (latest = stable)
 RELEASE_CHANNEL=latest
 
-# MSSQL Details
-MSSQL_HOST=localhost
-MSSQL_PORT=1433
-MSSQL_USER=testuser
-MSSQL_PASSWORD=Health123
-MSSQL_DATABASE=TestDB
+# PostgreSQL Details
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=odc
+POSTGRES_PASSWORD=Health123
+POSTGRES_DB=healthdb
 
 ## ---------------------------------
 ## PRODUCTION + DEVELOPMENT
