refactor(schema): refactor schema.prisma file datatypes to match mssql

--- a/.env.template
+++ b/.env.template
@@ -14,6 +14,7 @@ GATEWAY_PORT=3500
 
 # The Docker release to use (latest = stable)
 RELEASE_CHANNEL=latest
+RELEASE_VERSION=1.0.0
 
 # PostgreSQL Details
 POSTGRES_HOST=localhost
@@ -21,6 +22,10 @@ POSTGRES_PORT=5432
 POSTGRES_USER=odc
 POSTGRES_PASSWORD=Health123
 POSTGRES_DB=healthdb
+
+
+# PostgreSQL Database URL
+DATABASE_URL=postgresql://odc:Health123@postgres:5432/healthdb
 
 ## ---------------------------------
 ## PRODUCTION + DEVELOPMENT
@@ -58,7 +63,7 @@ VERBOSE=false
 THROTTLER_ENABLED=true
 # Disable iteration for password hashing (not recommended for production)
 # See https://pages.nist.gov/800-63-3/sp800-63b.html
-# DANGEROUSLY_DISABLE_PBKDF2_ITERATION=
+DANGEROUSLY_DISABLE_PBKDF2_ITERATION=false
 
 ## ---------------------------------
 ## DEVELOPMENT
