--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     ports:
       - ${APP_PORT}:80
     environment:
-      - SITE_ADDRESS
+      - SITE_ADDRESS=${SITE_ADDRESS}
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
@@ -22,26 +22,28 @@ services:
       context: .
       dockerfile: ./apps/api/Dockerfile
       args:
-        - RELEASE_VERSION
+        - RELEASE_VERSION=${RELEASE_VERSION}
     depends_on:
       - postgres # Replacing mongo with postgres
     restart: unless-stopped
     environment:
       - GATEWAY_INTERNAL_NETWORK_URL=http://gateway:80
+      - POSTGRES_HOST=${POSTGRES_HOST}
       - POSTGRES_PORT=5432
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DATABASE=${POSTGRES_DB}
+      - POSTGRES_DB=${POSTGRES_DB}
       - NODE_ENV=production
-      - DANGEROUSLY_DISABLE_PBKDF2_ITERATION
-      - DEBUG
-      - GATEWAY_API_KEY
-      - GATEWAY_ENABLED
-      - GATEWAY_REFRESH_INTERVAL
-      - GATEWAY_SITE_ADDRESS
-      - SECRET_KEY
-      - THROTTLER_ENABLED
-      - VERBOSE
+      - DANGEROUSLY_DISABLE_PBKDF2_ITERATION=${DANGEROUSLY_DISABLE_PBKDF2_ITERATION}
+      - DEBUG=${DEBUG}
+      - GATEWAY_API_KEY=${GATEWAY_API_KEY}
+      - GATEWAY_ENABLED=${GATEWAY_ENABLED}
+      - GATEWAY_REFRESH_INTERVAL=${GATEWAY_REFRESH_INTERVAL}
+      - GATEWAY_SITE_ADDRESS=${GATEWAY_SITE_ADDRESS}
+      - SECRET_KEY=${SECRET_KEY}
+      - THROTTLER_ENABLED=${THROTTLER_ENABLED}
+      - VERBOSE=${VERBOSE}
+      - DATABASE_URL=${DATABASE_URL}
     expose:
       - 80
     profiles:
@@ -50,7 +52,7 @@ services:
     image: ghcr.io/douglasneuroinformatics/open-data-capture-gateway:${RELEASE_CHANNEL}
     build:
       args:
-        - RELEASE_VERSION
+        - RELEASE_VERSION=${RELEASE_VERSION}
       context: .
       dockerfile: ./apps/gateway/Dockerfile
     ports:
@@ -63,23 +65,23 @@ services:
     restart: unless-stopped
     environment:
       - NODE_ENV=production
-      - GATEWAY_API_KEY
+      - GATEWAY_API_KEY=${GATEWAY_API_KEY}
   web:
     image: ghcr.io/douglasneuroinformatics/open-data-capture-web:${RELEASE_CHANNEL}
     build:
       args:
-        - RELEASE_VERSION
+        - RELEASE_VERSION=${RELEASE_VERSION}
       context: .
       dockerfile: ./apps/web/Dockerfile
     environment:
       - API_BASE_URL=/api
-      - CONTACT_EMAIL
-      - DOCS_URL
-      - GITHUB_REPO_URL
-      - LICENSE_URL
-      - GATEWAY_ENABLED
-      - PLAUSIBLE_BASE_URL
-      - PLAUSIBLE_WEB_DATA_DOMAIN
+      - CONTACT_EMAIL=${CONTACT_EMAIL}
+      - DOCS_URL=${DOCS_URL}
+      - GITHUB_REPO_URL=${GITHUB_REPO_URL}
+      - LICENSE_URL=${LICENSE_URL}
+      - GATEWAY_ENABLED=${GATEWAY_ENABLED}
+      - PLAUSIBLE_BASE_URL=${PLAUSIBLE_BASE_URL}
+      - PLAUSIBLE_WEB_DATA_DOMAIN=${PLAUSIBLE_WEB_DATA_DOMAIN}
     expose:
       - 80
     profiles:
